starstream-to-wasm/tests/snapshots/inputs@events.star.snap
---
source: starstream-to-wasm/tests/snapshots.rs
input_file: starstream-to-wasm/tests/inputs/events.star
---
==== AST ====
Program {
    shebang: None,
    definitions: [
        Spanned {
            node: Abi(
                AbiDef {
                    name: Identifier {
                        name: "Foo",
                        span: 4..7,
                    },
                    parts: [
                        Event(
                            EventDef {
                                name: Identifier {
                                    name: "Hello",
                                    span: 20..25,
                                },
                                params: [
                                    FunctionParam {
                                        public: false,
                                        name: Identifier {
                                            name: "one",
                                            span: 26..29,
                                        },
                                        ty: Named {
                                            name: [
                                                Identifier {
                                                    name: "i32",
                                                    span: 31..34,
                                                },
                                            ],
                                            generics: [],
                                        },
                                    },
                                    FunctionParam {
                                        public: false,
                                        name: Identifier {
                                            name: "two",
                                            span: 36..39,
                                        },
                                        ty: Named {
                                            name: [
                                                Identifier {
                                                    name: "i32",
                                                    span: 41..44,
                                                },
                                            ],
                                            generics: [],
                                        },
                                    },
                                ],
                                span: 14..47,
                            },
                        ),
                    ],
                },
            ),
            span: 0..50,
        },
        Spanned {
            node: Function(
                FunctionDef {
                    export: Some(
                        Script,
                    ),
                    name: Identifier {
                        name: "main",
                        span: 60..64,
                    },
                    params: [],
                    return_type: None,
                    body: Block {
                        statements: [
                            Spanned {
                                node: Expression(
                                    Spanned {
                                        node: Emit {
                                            callee: Spanned {
                                                node: ScopedName(
                                                    [
                                                        Identifier {
                                                            name: "Hello",
                                                            span: 78..83,
                                                        },
                                                    ],
                                                ),
                                                span: 78..83,
                                            },
                                            args: [
                                                Spanned {
                                                    node: Literal(
                                                        Integer(
                                                            IntegerLiteral {
                                                                digits: "1",
                                                                radix: Decimal,
                                                            },
                                                        ),
                                                    ),
                                                    span: 84..85,
                                                },
                                                Spanned {
                                                    node: Literal(
                                                        Integer(
                                                            IntegerLiteral {
                                                                digits: "2",
                                                                radix: Decimal,
                                                            },
                                                        ),
                                                    ),
                                                    span: 87..88,
                                                },
                                            ],
                                        },
                                        span: 73..89,
                                    },
                                ),
                                span: 73..91,
                            },
                        ],
                        tail_expression: None,
                        span: 67..93,
                    },
                },
            ),
            span: 50..93,
        },
    ],
}

==== Inference trace ====
T-Fn: main => ()
  T-Expr: {main: fn() -> ()} ⊢ emit Hello(1, 2); ⇒ ()
    T-Call: {main: fn() -> ()} ⊢ emit Hello(1, 2) ⇒ ()
      T-Var: {main: fn() -> ()} ⊢ Hello ⇒ event(one: i32, two: i32) -> ()
      T-Int: {main: fn() -> ()} ⊢ 1 ⇒ i64
      Unify-Var: i64 ~ i32 => {i32/t3}
      T-Int: {main: fn() -> ()} ⊢ 2 ⇒ i64
      Unify-Var: i64 ~ i32 => {i32/t4}

==== Typed AST ====
TypedProgram {
    definitions: [
        Abi(
            TypedAbiDef {
                ty: AbiType {
                    name: Identifier {
                        name: "Foo",
                        span: 4..7,
                    },
                    methods: [],
                },
                functions: [
                    TypedAbiMethodDecl {
                        name: Identifier {
                            name: "Hello",
                            span: 20..25,
                        },
                        id: NameId(4),
                        ty: FunctionType {
                            kind: Emit,
                            name_span: 20..25,
                            params: [
                                TypedFunctionParam {
                                    public: true,
                                    name: Identifier {
                                        name: "one",
                                        span: 26..29,
                                    },
                                    ty: Int(
                                        I32,
                                    ),
                                    ty_span: 31..34,
                                },
                                TypedFunctionParam {
                                    public: true,
                                    name: Identifier {
                                        name: "two",
                                        span: 36..39,
                                    },
                                    ty: Int(
                                        I32,
                                    ),
                                    ty_span: 41..44,
                                },
                            ],
                            result: Unit,
                            callee: Some(
                                Named(
                                    NameId(4),
                                ),
                            ),
                        },
                    },
                ],
            },
        ),
        Function(
            TypedFunctionDef {
                export: Some(
                    Script,
                ),
                name: Identifier {
                    name: "main",
                    span: 60..64,
                },
                id: NameId(5),
                ty: FunctionType {
                    kind: Normal,
                    name_span: 60..64,
                    params: [],
                    result: Unit,
                    callee: Some(
                        Named(
                            NameId(5),
                        ),
                    ),
                },
                body: TypedBlock {
                    statements: [
                        Expression(
                            Spanned {
                                node: TypedExpr {
                                    ty: Unit,
                                    kind: Call {
                                        callee: Spanned {
                                            node: TypedExpr {
                                                ty: Function(
                                                    FunctionType {
                                                        kind: Emit,
                                                        name_span: 20..25,
                                                        params: [
                                                            TypedFunctionParam {
                                                                public: true,
                                                                name: Identifier {
                                                                    name: "one",
                                                                    span: 26..29,
                                                                },
                                                                ty: Int(
                                                                    I32,
                                                                ),
                                                                ty_span: 31..34,
                                                            },
                                                            TypedFunctionParam {
                                                                public: true,
                                                                name: Identifier {
                                                                    name: "two",
                                                                    span: 36..39,
                                                                },
                                                                ty: Int(
                                                                    I32,
                                                                ),
                                                                ty_span: 41..44,
                                                            },
                                                        ],
                                                        result: Unit,
                                                        callee: Some(
                                                            Named(
                                                                NameId(4),
                                                            ),
                                                        ),
                                                    },
                                                ),
                                                kind: ScopedName {
                                                    name: [
                                                        Identifier {
                                                            name: "Hello",
                                                            span: 78..83,
                                                        },
                                                    ],
                                                    constant: Some(
                                                        0,
                                                    ),
                                                },
                                            },
                                            span: 78..83,
                                        },
                                        args: [
                                            Spanned {
                                                node: TypedExpr {
                                                    ty: Int(
                                                        I32,
                                                    ),
                                                    kind: Literal(
                                                        Integer(
                                                            IntegerLiteral {
                                                                digits: "1",
                                                                radix: Decimal,
                                                            },
                                                        ),
                                                    ),
                                                },
                                                span: 84..85,
                                            },
                                            Spanned {
                                                node: TypedExpr {
                                                    ty: Int(
                                                        I32,
                                                    ),
                                                    kind: Literal(
                                                        Integer(
                                                            IntegerLiteral {
                                                                digits: "2",
                                                                radix: Decimal,
                                                            },
                                                        ),
                                                    ),
                                                },
                                                span: 87..88,
                                            },
                                        ],
                                    },
                                },
                                span: 78..83,
                            },
                        ),
                    ],
                    tail_expression: None,
                },
            },
        ),
    ],
}

==== Core WebAssembly ====
(module
  (type (;0;) (func (param i32 i32)))
  (type (;1;) (func))
  (import "starstream:events/foo" "hello" (func (;0;) (type 0)))
  (export "main" (func 1))
  (func (;1;) (type 1)
    (call 0
      (i32.const 1)
      (i32.const 2))
  )
  (@custom "component-type"
    (component
      (@custom "wit-component-encoding" "\04\00")
      (type (;0;)
        (component
          (type (;0;)
            (component
              (type (;0;)
                (instance
                  (export (;0;) "utxo" (type (sub resource)))
                  (type (;1;) (borrow 0))
                  (type (;2;) (own 0))
                  (export (;3;) "token" (type (sub resource)))
                  (type (;4;) (borrow 3))
                  (type (;5;) (own 3))
                )
              )
              (import "starstream:std/builtin" (instance (;0;) (type 0)))
              (alias export 0 "utxo" (type (;1;)))
              (import "s-utxo" (type (;2;) (eq 1)))
              (type (;3;) (borrow 2))
              (type (;4;) (own 2))
              (alias export 0 "token" (type (;5;)))
              (import "s-token" (type (;6;) (eq 5)))
              (type (;7;) (borrow 6))
              (type (;8;) (own 6))
              (type (;9;)
                (instance
                  (type (;0;) (func (param "one" s32) (param "two" s32)))
                  (export (;0;) "hello" (func (type 0)))
                )
              )
              (import "starstream:events/foo" (instance (;1;) (type 9)))
              (type (;10;) (func))
              (export (;0;) "main" (func (type 10)))
            )
          )
          (export (;0;) "my-namespace:my-package/my-world" (component (type 0)))
        )
      )
      (export (;1;) "x" (type 0))
    )
  )
)

==== WIT ====
package root:component;

world root {
  import starstream:std/builtin;
  import starstream:events/foo;
  use starstream:std/builtin.{utxo as s-utxo, token as s-token};

  export main: func();
}
package starstream:std {
  interface builtin {
    resource utxo;

    resource token;
  }
}


package starstream:events {
  interface foo {
    hello: func(one: s32, two: s32);
  }
}
